--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
+    "miragejs": "^0.1.41",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "web-vitals": "^1.0.1",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@testing-library/user-event": "^12.1.10",
     "@testing-library/jest-dom": "^5.11.4",
-    "@types/styled-components": "^5.1.9",
     "@testing-library/react": "^11.1.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react": "^17.0.0",
+    "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.9",
     "typescript": "^4.1.2"
   },
   "scripts": {
